# dld

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: elf.rs  error.rs  lib.rs  linker_script.rs  main.rs  name.rs  object.rs  serialize.rs  symbol.rs  utils.rs
src/elf/: chunk.rs  copy_rel.rs  options.rs  plt.rs  section.rs  string_table.rs  symbol_table.rs
tests/: links.rs  same_objdump.rs
tests/c/: printf.c
tests/obj-files/: f2.c
