[package]
name = "dld"
version = "0.1.0"
authors = ["Robert Bartlensky <bartlensky.robert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
goblin = "0.4.2"
pico-args = "0.4"
thiserror = "1.0"
