[package]
name = "dld"
version = "0.1.0"
authors = ["Robert Bartlensky <bartlensky.robert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
# would be nice to get rid of elf32: https://github.com/m4b/goblin/issues/212
goblin = { version = "0.4", features = ["elf32", "elf64", "endian_fd", "std"], default-features = false }
pico-args = "0.4"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
